# lens

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
assayer/: Cargo.toml
assayer/src/: lib.rs
binius/: Cargo.toml
binius/src/: lib.rs
brakedown/: Cargo.toml
brakedown/src/: expander.rs  lib.rs  tensor.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: impls.rs  lib.rs  transcript.rs  types.rs
docs/explanation/: README.md  applications.md  class-group.md  f2-fp-trop.md  f2-vs-fp.md  fhe-overview.md  inversion.md  karatsuba.md  kleene-star.md  montgomery-ladder.md  negacyclic-ntt.md  polynomial-rings.md  tower-construction.md  verification.md
genies/cli/: Cargo.toml
genies/cli/src/: main.rs
genies/docs/explanation/: csidh-prime.md  isogenies.md  supersingular-curves.md  verification.md
genies/rs/: Cargo.toml
genies/rs/benches/: genies.rs
genies/rs/src/: action.rs  curve.rs  encoding.rs  fq.rs  isogeny.rs  lib.rs  ops.rs  vectors.rs
genies/specs/: curves.md  prime.md
genies/tri/: curve.tri  encoding.tri  fq.tri  isogeny.tri
genies/wgsl/: Cargo.toml
genies/wgsl/src/: lib.rs
ikat/: Cargo.toml
ikat/src/: lib.rs
jali/: README.md
jali/cli/: Cargo.toml
jali/cli/src/: main.rs
jali/docs/explanation/: README.md  five-algebras.md  lattice-security.md
jali/rs/: Cargo.toml
jali/rs/benches/: ring.rs
jali/rs/src/: encoding.rs  lib.rs  noise.rs  ntt.rs  ring.rs  sample.rs  vectors.rs
jali/specs/: README.md  encoding.md  noise.md  ntt.md  ring.md  sample.md  vectors.md
jali/tri/: encoding.tri  ntt.tri  sample.tri
jali/wgsl/: Cargo.toml
jali/wgsl/src/: lib.rs
jali/wgsl/src/shaders/: ring.wgsl
kuro/: CLAUDE.md  Cargo.toml
kuro/cli/: Cargo.toml
kuro/cli/src/: main.rs
kuro/docs/explanation/: README.md  binary-fields.md  packed-operations.md
kuro/rs/: Cargo.toml  batch.rs  encoding.rs  lib.rs  ops.rs  packed.rs  tower.rs  vectors.rs
kuro/rs/benches/: tower.rs
kuro/specs/: README.md  batch.md  field.md  packed.md  tower.md
kuro/tri/: encoding.tri  inv.tri  packed.tri
kuro/wgsl/: Cargo.toml
kuro/wgsl/src/: lib.rs
kuro/wgsl/src/shaders/: tower.wgsl
nebu/cli/: Cargo.toml
nebu/cli/src/: main.rs
nebu/rs/: Cargo.toml  batch.rs  encoding.rs  field.rs  lib.rs  ntt.rs  sqrt.rs  vectors.rs
nebu/rs/extension/: fp2.rs  fp3.rs  fp4.rs
nebu/wgsl/: Cargo.toml
nebu/wgsl/src/: lib.rs
nebu/wgsl/tests/: gpu.rs
porphyry/: Cargo.toml
porphyry/src/: lib.rs
reference/: README.md  tropical-semiring.md
rs/: Cargo.toml  encoding.rs  inv.rs  lib.rs  packed.rs  tower.rs
rs/benches/: genies.rs  tropical.rs
rs/src/: curve.rs  determinant.rs  eigenvalue.rs  encoding.rs  fq.rs  kleene.rs  lib.rs  noise.rs  ring.rs  sample.rs  vectors.rs
specs/: README.md  action.md  automorphism.md  binary-tower.md  class-group.md  commitment.md  dual.md  encoding.md  hardware.md  inversion.md  isogeny-curves.md  isogeny.md  kleene.md  matrix.md  polynomial-ring.md  scalar-field.md  semiring.md  trait.md  tropical-semiring.md  vectors.md  verification.md
src/: Cargo.toml  integration_tests.rs  lib.rs
tri/: action.tri  batch.tri  determinant.tri  dual.tri  eigenvalue.tri  encoding.tri  matrix.tri  noise.tri  ring.tri  tower.tri
trop/: CLAUDE.md  Cargo.toml  README.md
trop/cli/: Cargo.toml
trop/cli/src/: main.rs
trop/docs/explanation/: README.md  applications.md  matrix-algebra.md  tropical-semiring.md
trop/rs/: Cargo.toml
trop/rs/benches/: tropical.rs
trop/rs/src/: determinant.rs  dual.rs  eigenvalue.rs  element.rs  encoding.rs  kleene.rs  lib.rs  matrix.rs  vectors.rs
trop/specs/: README.md  determinant.md  eigenvalue.md  encoding.md  vectors.md
trop/tri/: element.tri  kleene.tri
trop/wgsl/: Cargo.toml
trop/wgsl/src/: lib.rs
trop/wgsl/src/shaders/: mod.rs  tropical.wgsl
wgsl/src/: lib.rs
wgsl/src/shaders/: batch.wgsl  fq.wgsl  mod.rs
