# ---
# tags: lens, config
# crystal-type: source
# crystal-domain: comp
# ---
[workspace]
resolver = "3"
members = [
    "core",
    "brakedown", "binius", "ikat", "assayer", "porphyry",
    "src",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/cyberia-to/lens"
rust-version = "1.89"

[workspace.dependencies]
# algebra crates (from ../algebra/ for dev, crates.io versions for publish)
cyb-algebra = { path = "../algebra/core" }
nebu = { version = "0.1.0", path = "../algebra/nebu/rs", package = "cyb-nebu" }
kuro = { version = "0.1.0", path = "../algebra/kuro/rs", package = "cyb-kuro" }
jali = { version = "0.1.0", path = "../algebra/jali/rs", package = "cyb-jali" }
trop = { version = "0.1.0", path = "../algebra/trop/rs", package = "cyb-trop" }
genies = { version = "0.1.0", path = "../algebra/genies/rs", package = "cyb-genies" }

# external
cyber-hemera = "0.2"
acpu = "0.2"
criterion = "0.5"
