# ---
# tags: lens, config
# crystal-type: source
# crystal-domain: comp
# ---
[workspace]
resolver = "3"
members = [
    "core",
    "brakedown", "binius", "ikat", "assayer", "porphyry",
    "src",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/cyberia-to/lens"
rust-version = "1.89"

[workspace.dependencies]
# algebra crates (from ../strata/ for dev, crates.io versions for publish)
strata-core = { path = "../strata/core" }
nebu = { version = "0.1.0", path = "../strata/nebu/rs", package = "cyb-nebu" }
kuro = { version = "0.1.0", path = "../strata/kuro/rs", package = "cyb-kuro" }
jali = { version = "0.1.0", path = "../strata/jali/rs", package = "cyb-jali" }
trop = { version = "0.1.0", path = "../strata/trop/rs", package = "cyb-trop" }
genies = { version = "0.1.0", path = "../strata/genies/rs", package = "cyb-genies" }

# external
cyber-hemera = "0.2"
acpu = "0.2"
criterion = "0.5"
