[package]
name = "cyb-lens-binius"
version.workspace = true
edition.workspace = true
license-file = "../LICENSE"
description = "Binius polynomial commitment — binary Reed-Solomon over F₂ tower"
repository.workspace = true
rust-version.workspace = true
keywords = ["binius", "polynomial-commitment", "zk", "crypto"]
categories = ["cryptography"]

[dependencies]
cyb-lens-core = { path = "../core" }
kuro.workspace = true
