[package]
name = "cyb-lens-core"
version.workspace = true
edition.workspace = true
license-file = "../LICENSE"
description = "Lens trait, types, and transcript for polynomial commitment"
repository.workspace = true
rust-version.workspace = true
keywords = ["polynomial-commitment", "zk", "crypto", "pcs"]
categories = ["cryptography"]
readme = "../README.md"

[dependencies]
cyb-algebra.workspace = true
cyber-hemera.workspace = true
