[package]
name = "cyb-lens-ikat"
version.workspace = true
edition.workspace = true
license-file = "../LICENSE"
description = "Ikat polynomial commitment — NTT-batched Brakedown over R_q"
repository.workspace = true
rust-version.workspace = true
keywords = ["ikat", "polynomial-commitment", "fhe", "crypto"]
categories = ["cryptography"]

[dependencies]
cyb-lens-core = { path = "../core" }
cyb-lens-brakedown = { path = "../brakedown" }
jali.workspace = true
nebu.workspace = true
