[package]
name = "cyb-lens-porphyry"
version.workspace = true
edition.workspace = true
license-file = "../LICENSE"
description = "Porphyry polynomial commitment — Brakedown over deep field F_q"
repository.workspace = true
rust-version.workspace = true
keywords = ["porphyry", "polynomial-commitment", "isogeny", "crypto"]
categories = ["cryptography"]

[dependencies]
cyb-lens-core = { path = "../core", features = ["genies"] }
genies.workspace = true
cyber-hemera.workspace = true
