[package]
name = "cyb-genies"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
description = "Commutative group action over supersingular isogenies for post-quantum privacy"
repository.workspace = true
rust-version.workspace = true
keywords = ["isogeny", "csidh", "post-quantum", "crypto"]
categories = ["cryptography", "no-std::no-alloc"]
readme = "../README.md"
exclude = ["../specs/", "../docs/", "../CLAUDE.md"]

[dependencies]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "genies"
harness = false
