# ---
# tags: jali, config
# crystal-type: source
# crystal-domain: comp
# ---
[package]
name = "jali-cli"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "jali"
path = "src/main.rs"

[dependencies]
jali.workspace = true
jali-wgsl.workspace = true
nebu.workspace = true
