# ---
# tags: jali, config
# crystal-type: source
# crystal-domain: comp
# ---
[package]
name = "cyb-jali"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
description = "polynomial ring arithmetic R_q = F_p[x]/(x^n+1) over Goldilocks"
repository.workspace = true
rust-version.workspace = true
keywords = ["polynomial-ring", "ntt", "fhe", "crypto"]
categories = ["cryptography", "no-std::no-alloc"]
readme = "../README.md"

[lib]
name = "jali"
path = "src/lib.rs"

[dependencies]
nebu.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "ring"
harness = false
