[package]
name = "cyb-kuro"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
description = "F₂ tower field arithmetic for binary proving"
repository.workspace = true
rust-version.workspace = true
keywords = ["binary-field", "tower", "zk", "crypto"]
categories = ["cryptography", "no-std::no-alloc"]
readme = "../README.md"
exclude = ["../specs/", "../docs/", "../CLAUDE.md"]

[lib]
name = "kuro"
path = "lib.rs"

[dependencies]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "tower"
harness = false
