# ---
# tags: nebu, config
# crystal-type: source
# crystal-domain: comp
# ---
[package]
name = "cyb-nebu"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
description = "Goldilocks prime field arithmetic"
repository.workspace = true
rust-version.workspace = true
keywords = ["goldilocks", "finite-field", "zk", "crypto"]
categories = ["cryptography", "no-std::no-alloc"]
readme = "../README.md"
exclude = ["../specs/", "../docs/", "../tri/", "../CLAUDE.md"]

[lib]
name = "nebu"
path = "lib.rs"

[dependencies]
acpu = { version = "0.2", optional = true }

[features]
default = ["fast"]
fast = ["acpu"]
