# ---
# tags: nebu, config
# crystal-type: source
# crystal-domain: comp
# ---
[package]
name = "nebu-wgsl"
version.workspace = true
edition.workspace = true
description = "GPU backend for nebu — Goldilocks field via wgpu compute shaders"
publish = false

[dependencies]
nebu.workspace = true
wgpu.workspace = true
pollster.workspace = true
