[package]
name = "cyb-trop"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
description = "Tropical semiring arithmetic for provable optimization"
repository.workspace = true
rust-version.workspace = true
keywords = ["tropical", "semiring", "optimization", "crypto"]
categories = ["cryptography", "no-std::no-alloc"]
readme = "../README.md"
exclude = ["../specs/", "../docs/", "../CLAUDE.md"]

[dependencies]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "tropical"
harness = false
